# timer

./: CMakeLists.txt  LICENSE
include/: timer.h
src/: CMakeLists.txt  example.c
